Tue Oct 31 11:30:01 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java
	  src/org/jcae/mesh/amibe/algos3d/DecimateVertex.java
	  src/org/jcae/mesh/oemm/IndexedStorage.java
	  src/org/jcae/mesh/xmldata/MeshWriter.java: Define Mesh.triangleList
	as an HashSet instead of ArrayList to speed up triangle removal.
	* src/org/jcae/mesh/amibe/ds/Vertex.java (clone): Optimization:
	Construct param[] only if needed.
	* src/org/jcae/mesh/amibe/metrics/Quadric3DError.java
	  src/org/jcae/mesh/amibe/metrics/Matrix3D.java
	  src/org/jcae/mesh/amibe/metrics/Metric3D.java
	  src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java
	  src/org/jcae/mesh/amibe/algos3d/DecimateVertex.java: Store
	  Matrix3D.data in a double[9] array instead of double[3][3] for
	  efficiency reasons.  New Quadric3DError class, to refactor code
	  in Decimate* algorithms.

Mon Oct 30 23:09:36 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java (isValid): Check that symmetric
	OTriangle instances are consistent with respect to boundary tag.
	* src/org/jcae/mesh/amibe/ds/HalfEdge.java: New swap() method.
	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: Add edge
	swapping, DecimateHalfEdge can now be used instead of DecimateVertex.

Mon Oct 30 16:59:16 CET 2006 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/DecimateVertex.java: Increase
	penalty for boundary edges.
	* src/org/jcae/mesh/amibe/ds/HalfEdge.java: OTriangle is not well
	suited for some algorithms, like DecimateVertex.  This new HalfEdge
	class gives access to edge objects and will improve performance for
	these algorithms.
	* src/org/jcae/mesh/amibe/ds/Mesh.java
	  src/org/jcae/mesh/amibe/ds/Triangle.java: Add support for HalfEdge.
	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: New
	decimation algorithm, based on HalfEdge structure.  It is not
	equivalent to DecimateVertex because edges are not swapped yet.