@@ -169,6 +169,9 @@ public class DecimateVertex
 	public void compute()
 	{
 		logger.info("Running DecimateVertex");
+		// Store triangles in an HashSet to speed up removal.
+		HashSet newList = new HashSet(mesh.getTriangles());
+		mesh.setTrianglesList(newList);
 		int roughNrNodes = mesh.getTriangles().size()/2;
 		HashSet nodeset = new HashSet(roughNrNodes);
 		HashMap quadricMap = new HashMap(roughNrNodes);
