@@ -4,7 +4,8 @@ Tue Oct 31 11:30:01 CET 2006 Denis Barbier <barbier@users.sourceforge.net>
 	  src/org/jcae/mesh/amibe/algos3d/DecimateVertex.java
 	  src/org/jcae/mesh/oemm/IndexedStorage.java
 	  src/org/jcae/mesh/xmldata/MeshWriter.java: Define Mesh.triangleList
-	as an HashSet instead of ArrayList to speed up triangle removal.
+	as a Collection so that algorithms can choose to use an HashSet to
+	speed up triangle removal.
 	* src/org/jcae/mesh/amibe/ds/Vertex.java (clone): Optimization:
 	Construct param[] only if needed.
 	* src/org/jcae/mesh/amibe/metrics/Quadric3DError.java
